<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.18">
  <GVL Name="Base_Const" Id="{a1981d85-78de-4b6d-af19-683b3d53c959}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	///number of child access possible in one controller class
	cMaxNrOfChilds: UINT := 10;
	///maximal number of commands implemented in one controller class
	cMaxCmdPerCtrl: UINT := 15;
	///maximal number of commands implemented in one controller class
	cMaxBaseCmdState: UINT := 200;
END_VAR]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>