<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.14">
  <DUT Name="T_Ctrl_CmdListElement" Id="{ea008489-075a-49a0-a6de-0b7ede321d6d}">
    <Declaration><![CDATA[TYPE T_Ctrl_CmdListElement :
STRUCT
	///command implemented in controller
	intCmd: INT;
	///command is available info for UI
	bolAvailable: BOOL;
	
	// Name of command. Important for UI.
	strName: STRING;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>