<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.18">
  <DUT Name="T_Ctrl_SwCfg" Id="{7525dfca-c879-4907-b506-2c6fbb0d544c}">
    <Declaration><![CDATA[TYPE T_Ctrl_SwCfg :
STRUCT
	///hardware/controller exists
	bolExist: BOOL;
	///enable statemachine
	bolEnable: BOOL;
	///set controller in simulation(statemachine active, io local simulated)
	bolSimulation: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>